NS.CalviScript/Grammar.txt
Program			-> (Block|Statement)+ EOI
Block			-> '{' (Block|Statement)* '}'
Statement		-> (VarDecl | Assign | Expression) ';'
VarDecl			-> 'var' IDENTIFIER
Assign			-> IIdentifier '=' Expression
IIdentifier		-> IDENTIFIER | VarDecl
Expression		-> MathExpression ('?' Expression ':' Expression)?
MathExpression	-> Term (('+' | '-') Term)*
Term			-> Factor (('*' | '/' | '%') Factor)*
Factor			-> '-'? PositiveFactor
PositiveFactor	-> NUMBER | IDENTIFIER | ('(' Expression ')')
